--- a/index.html
+++ b/index.html
@@ -11,37 +11,28 @@
     <div class="container">
       <div class="left">
         <div class="top">
-          <img class="user-img" src="./user.png" alt="user" />
+          <img class="user-img" src="./images/user.png" alt="user" />
           <div class="icons-div">
-            <img class="email-icon" src="./email.svg" alt="" />
-            <img class="more-icon" src="./more.svg" alt="" />
+            <img class="email-icon" src="./icons/email.svg" alt="" />
+            <img class="more-icon" src="./icons/more.svg" alt="" />
           </div>
         </div>
         <div class="search">
-          <img src="./search.svg" class="search-icon" alt="" />
+          <img src="./icons/search.svg" class="search-icon" alt="" />
           <input class="input-search" type="text" />
         </div>
         <div class="chat">
-          <div class="user user1">
-            <img class="usr-img chat-img" src="./user.png" alt="" />
+          <div class="user user2">
+            <img class="usr-img chat-img" src="./images/user.png" alt="" />
             <div class="name-div">
               <h5 class="name">Dimitri Marco</h5>
-              <h6 class="typing grey-color">typing</h6>
+              <h6 class="typing">typing</h6>
             </div>
             <h5 class="time">10:45</h5>
           </div>
           <hr />
           <div class="user user1">
-            <img class="usr-img chat-img" src="./user.png" alt="" />
-            <div class="name-div">
-              <h5 class="name">Dimitri Marco</h5>
-              <h6>typing</h6>
-            </div>
-            <h5 class="time">10:45</h5>
-          </div>
-          <hr />
-          <div class="user user1">
-            <img class="usr-img chat-img" src="./user.png" alt="" />
+            <img class="usr-img chat-img" src="./images/user.png" alt="" />
             <div class="name-div">
               <h5 class="name">Dimitri Marco</h5>
               <h6>typing</h6>
@@ -50,7 +41,7 @@
           </div>
           <hr />
           <div class="user user1">
-            <img class="usr-img chat-img" src="./user.png" alt="" />
+            <img class="usr-img chat-img" src="./images/user.png" alt="" />
             <div class="name-div">
               <h5 class="name">Dimitri Marco</h5>
               <h6>typing</h6>
@@ -59,7 +50,7 @@
           </div>
           <hr />
           <div class="user user1">
-            <img class="usr-img chat-img" src="./user.png" alt="" />
+            <img class="usr-img chat-img" src="./images/user.png" alt="" />
             <div class="name-div">
               <h5 class="name">Dimitri Marco</h5>
               <h6>typing</h6>
@@ -68,7 +59,7 @@
           </div>
           <hr />
           <div class="user user1">
-            <img class="usr-img chat-img" src="./user.png" alt="" />
+            <img class="usr-img chat-img" src="./images/user.png" alt="" />
             <div class="name-div">
               <h5 class="name">Dimitri Marco</h5>
               <h6>typing</h6>
@@ -77,7 +68,7 @@
           </div>
           <hr />
           <div class="user user1">
-            <img class="usr-img chat-img" src="./user.png" alt="" />
+            <img class="usr-img chat-img" src="./images/user.png" alt="" />
             <div class="name-div">
               <h5 class="name">Dimitri Marco</h5>
               <h6>typing</h6>
@@ -86,7 +77,7 @@
           </div>
           <hr />
           <div class="user user1">
-            <img class="usr-img chat-img" src="./user.png" alt="" />
+            <img class="usr-img chat-img" src="./images/user.png" alt="" />
             <div class="name-div">
               <h5 class="name">Dimitri Marco</h5>
               <h6>typing</h6>
@@ -95,7 +86,7 @@
           </div>
           <hr />
           <div class="user user1">
-            <img class="usr-img chat-img" src="./user.png" alt="" />
+            <img class="usr-img chat-img" src="./images/user.png" alt="" />
             <div class="name-div">
               <h5 class="name">Dimitri Marco</h5>
               <h6>typing</h6>
@@ -104,7 +95,16 @@
           </div>
           <hr />
           <div class="user user1">
-            <img class="usr-img chat-img" src="./user.png" alt="" />
+            <img class="usr-img chat-img" src="./images/user.png" alt="" />
+            <div class="name-div">
+              <h5 class="name">Dimitri Marco</h5>
+              <h6>typing</h6>
+            </div>
+            <h5 class="time">10:45</h5>
+          </div>
+          <hr />
+          <div class="user user1">
+            <img class="usr-img chat-img" src="./images/user.png" alt="" />
             <div class="name-div">
               <h5 class="name">Dimitri Marco</h5>
               <h6>typing</h6>
@@ -119,12 +119,12 @@
       <div class="right">
         <div class="top-profile-bar">
           <div class="profile-details">
-            <img src="./user.png" class="profile-user" alt="" />
+            <img src="./images/user.png" class="profile-user" alt="" />
             <h5>Dimitri Marco</h5>
           </div>
           <div class="profile-icons">
-            <img src="./attach.svg" alt="" class="attach-icon" />
-            <img src="./more.svg" alt="" class="more-icon" />
+            <img src="./icons/attach.svg" alt="" class="attach-icon" />
+            <img src="./icons/more.svg" alt="" class="more-icon" />
           </div>
         </div>
         <div class="chat-details">
@@ -136,9 +136,9 @@
           </div>
         </div>
         <div class="chat-input-right">
-          <img src="./emoji.svg" alt="" class="emoji" />
+          <img src="./icons/emoji.svg" alt="" class="emoji" />
           <input type="text" class="enter-msg" />
-          <img src="./voice.svg" alt="" class="voice" />
+          <img src="./icons/voice.svg" alt="" class="voice" />
         </div>
       </div>
     </div>
