modified and optimised

--- a/index.html
+++ b/index.html
@@ -6,12 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Whatsapp Web</title>
     <link rel="stylesheet" href="./styles.css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Open+Sans:ital,wght@1,300&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div class="container">
       <div class="left">
         <div class="top">
-          <img class="user-img" src="./images/user.png" alt="user" />
+          <img class="user-img" src="./images/p2.jpg" alt="user" />
           <div class="icons-div">
             <img class="email-icon" src="./icons/email.svg" alt="" />
             <img class="more-icon" src="./icons/more.svg" alt="" />
@@ -19,99 +24,147 @@
         </div>
         <div class="search">
           <img src="./icons/search.svg" class="search-icon" alt="" />
-          <input class="input-search" type="text" />
+          <input
+            class="input-search"
+            type="text"
+            placeholder="Search or start a new chat"
+          />
         </div>
         <div class="chat">
-          <div class="user user2">
-            <img class="usr-img chat-img" src="./images/user.png" alt="" />
+          <!-- user chat starts form here -->
+          <!-- each chat start line -->
+          <div class="user user1">
+            <div class="usr-img-container">
+              <img class="usr-img chat-img" src="./images/p3.jpg" alt="" />
+            </div>
             <div class="name-div">
-              <h5 class="name">Dimitri Marco</h5>
+              <h5 class="name">William</h5>
               <h6 class="typing">typing</h6>
             </div>
             <h5 class="time">10:45</h5>
           </div>
           <hr />
-          <div class="user user1">
-            <img class="usr-img chat-img" src="./images/user.png" alt="" />
-            <div class="name-div">
-              <h5 class="name">Dimitri Marco</h5>
-              <h6>typing</h6>
+          <!-- each chat end line -->
+          <!-- each chat start line -->
+          <div class="user user2">
+            <div class="usr-img-container">
+              <img class="usr-img chat-img" src="./images/p4.jpg" alt="" />
             </div>
-            <h5 class="time">10:45</h5>
+            <div class="name-div">
+              <h5 class="name">Ava</h5>
+              <h6 class="seen">forward to me</h6>
+            </div>
+            <h5 class="time">02:35</h5>
           </div>
           <hr />
-          <div class="user user1">
-            <img class="usr-img chat-img" src="./images/user.png" alt="" />
-            <div class="name-div">
-              <h5 class="name">Dimitri Marco</h5>
-              <h6>typing</h6>
+          <!-- each chat end line -->
+          <!-- each chat start line -->
+          <div class="user user2">
+            <div class="usr-img-container">
+              <img class="usr-img chat-img" src="./images/p14.jpg" alt="" />
             </div>
-            <h5 class="time">10:45</h5>
+            <div class="name-div">
+              <h5 class="name">Noah</h5>
+              <h6 class="seen">wait, coming</h6>
+            </div>
+            <h5 class="time">01:15</h5>
           </div>
           <hr />
-          <div class="user user1">
-            <img class="usr-img chat-img" src="./images/user.png" alt="" />
-            <div class="name-div">
-              <h5 class="name">Dimitri Marco</h5>
-              <h6>typing</h6>
+          <!-- each chat end line -->
+          <!-- each chat start line -->
+          <div class="user user2">
+            <div class="usr-img-container">
+              <img class="usr-img chat-img" src="./images/p13.jpg" alt="" />
             </div>
-            <h5 class="time">10:45</h5>
+            <div class="name-div">
+              <h5 class="name">James</h5>
+              <h6 class="seen">easy</h6>
+            </div>
+            <h5 class="time">12:15</h5>
           </div>
           <hr />
-          <div class="user user1">
-            <img class="usr-img chat-img" src="./images/user.png" alt="" />
-            <div class="name-div">
-              <h5 class="name">Dimitri Marco</h5>
-              <h6>typing</h6>
+          <!-- each chat end line -->
+          <!-- each chat start line -->
+          <div class="user user2">
+            <div class="usr-img-container">
+              <img class="usr-img chat-img" src="./images/p5.jpg" alt="" />
             </div>
-            <h5 class="time">10:45</h5>
+            <div class="name-div">
+              <h5 class="name">Alexandra</h5>
+              <h6 class="seen">oky</h6>
+            </div>
+            <h5 class="time">11:15</h5>
           </div>
           <hr />
-          <div class="user user1">
-            <img class="usr-img chat-img" src="./images/user.png" alt="" />
-            <div class="name-div">
-              <h5 class="name">Dimitri Marco</h5>
-              <h6>typing</h6>
+          <!-- each chat end line -->
+          <!-- each chat start line -->
+          <div class="user user2">
+            <div class="usr-img-container">
+              <img class="usr-img chat-img" src="./images/p11.jpg" alt="" />
             </div>
-            <h5 class="time">10:45</h5>
+            <div class="name-div">
+              <h5 class="name">Lara</h5>
+              <h6 class="seen">sure</h6>
+            </div>
+            <h5 class="time">10:10</h5>
           </div>
           <hr />
-          <div class="user user1">
-            <img class="usr-img chat-img" src="./images/user.png" alt="" />
-            <div class="name-div">
-              <h5 class="name">Dimitri Marco</h5>
-              <h6>typing</h6>
+          <!-- each chat end line -->
+          <!-- each chat start line -->
+          <div class="user user2">
+            <div class="usr-img-container">
+              <img class="usr-img chat-img" src="./images/p10.jpg" alt="" />
             </div>
-            <h5 class="time">10:45</h5>
+            <div class="name-div">
+              <h5 class="name">Tim</h5>
+              <h6 class="seen">he is not there</h6>
+            </div>
+            <h5 class="time">9:15</h5>
           </div>
           <hr />
-          <div class="user user1">
-            <img class="usr-img chat-img" src="./images/user.png" alt="" />
-            <div class="name-div">
-              <h5 class="name">Dimitri Marco</h5>
-              <h6>typing</h6>
+          <!-- each chat end line -->
+          <!-- each chat start line -->
+          <div class="user user2">
+            <div class="usr-img-container">
+              <img class="usr-img chat-img" src="./images/p9.jpg" alt="" />
             </div>
-            <h5 class="time">10:45</h5>
+            <div class="name-div">
+              <h5 class="name">Kathine</h5>
+              <h6 class="seen">that is not by me</h6>
+            </div>
+            <h5 class="time">8:00</h5>
           </div>
           <hr />
-          <div class="user user1">
-            <img class="usr-img chat-img" src="./images/user.png" alt="" />
-            <div class="name-div">
-              <h5 class="name">Dimitri Marco</h5>
-              <h6>typing</h6>
+          <!-- each chat end line -->
+          <!-- each chat start line -->
+          <div class="user user2">
+            <div class="usr-img-container">
+              <img class="usr-img chat-img" src="./images/p7.png" alt="" />
             </div>
-            <h5 class="time">10:45</h5>
+            <div class="name-div">
+              <h5 class="name">Richard</h5>
+              <h6 class="seen">it's transfered</h6>
+            </div>
+            <h5 class="time">7:05</h5>
           </div>
           <hr />
-          <div class="user user1">
-            <img class="usr-img chat-img" src="./images/user.png" alt="" />
-            <div class="name-div">
-              <h5 class="name">Dimitri Marco</h5>
-              <h6>typing</h6>
+          <!-- each chat end line -->
+
+          <!-- each chat start line -->
+          <div class="user user2">
+            <div class="usr-img-container">
+              <img class="usr-img chat-img" src="./images/p6.jpg" alt="" />
             </div>
-            <h5 class="time">10:45</h5>
+            <div class="name-div">
+              <h5 class="name">Thomus</h5>
+              <h6 class="seen">It't not fair</h6>
+            </div>
+            <h5 class="time">7:01</h5>
           </div>
           <hr />
+          <!-- each chat end line -->
+
+          <!-- user chat ends here -->
         </div>
       </div>
       <!-- <hr class="seperator" /> -->
@@ -119,8 +172,8 @@
       <div class="right">
         <div class="top-profile-bar">
           <div class="profile-details">
-            <img src="./images/user.png" class="profile-user" alt="" />
-            <h5>Dimitri Marco</h5>
+            <img src="./images/p3.jpg" class="profile-user" alt="" />
+            <h5>William</h5>
           </div>
           <div class="profile-icons">
             <img src="./icons/attach.svg" alt="" class="attach-icon" />
@@ -128,16 +181,53 @@
           </div>
         </div>
         <div class="chat-details">
+          <!-- all msg -->
+          <!-- each msg starts -->
           <div class="sent-msg msg-container">
-            <h5>Hey how are you doing today hope uou are fine</h5>
+            <h5>You should bring two of those for the party</h5>
           </div>
           <div class="received-msg msg-container">
-            <h5>Hey</h5>
+            <h5>I have 3 of those.I can bring it all</h5>
           </div>
+          <!-- each msg ends -->
+          <!-- each msg starts -->
+          <div class="sent-msg msg-container">
+            <h5>No.. no need of three</h5>
+          </div>
+          <div class="received-msg msg-container">
+            <h5>I have no use of them.So why should I keep that?</h5>
+          </div>
+          <!-- each msg ends -->
+          <div class="sent-msg msg-container">
+            <h5>but.....</h5>
+          </div>
+          <div class="received-msg msg-container">
+            <h5>but what!?</h5>
+          </div>
+          <!-- each msg ends -->
+          <!-- each msg ends -->
+          <div class="sent-msg msg-container">
+            <h5>Call James he should be there for the party</h5>
+          </div>
+          <div class="received-msg msg-container">
+            <h5>I will take care of it.</h5>
+          </div>
+          <!-- each msg ends -->
+          <!-- each msg ends -->
+          <div class="sent-msg msg-container">
+            <h5>Fine. see you there</h5>
+          </div>
+          <div class="received-msg msg-container">
+            <h5>meet yu all there</h5>
+          </div>
+          <!-- each msg ends -->
+
+          <!-- all msg ends -->
         </div>
         <div class="chat-input-right">
           <img src="./icons/emoji.svg" alt="" class="emoji" />
-          <input type="text" class="enter-msg" />
+          <img class="attach" src="./icons/attach.svg" alt="" />
+          <input type="text" class="enter-msg" placeholder="Type a message" />
           <img src="./icons/voice.svg" alt="" class="voice" />
         </div>
       </div>
