added more conversations

--- a/index.html
+++ b/index.html
@@ -198,6 +198,7 @@
             <h5>I have no use of them.So why should I keep that?</h5>
           </div>
           <!-- each msg ends -->
+          <!-- each msg starts -->
           <div class="sent-msg msg-container">
             <h5>but.....</h5>
           </div>
@@ -205,7 +206,7 @@
             <h5>but what!?</h5>
           </div>
           <!-- each msg ends -->
-          <!-- each msg ends -->
+          <!-- each msg starts -->
           <div class="sent-msg msg-container">
             <h5>Call James he should be there for the party</h5>
           </div>
@@ -213,12 +214,36 @@
             <h5>I will take care of it.</h5>
           </div>
           <!-- each msg ends -->
-          <!-- each msg ends -->
+          <!-- each msg starts -->
           <div class="sent-msg msg-container">
             <h5>Fine. see you there</h5>
           </div>
           <div class="received-msg msg-container">
-            <h5>meet yu all there</h5>
+            <h5>should I take my car?</h5>
+          </div>
+          <!-- each msg ends -->
+          <!-- each msg starts -->
+          <div class="sent-msg msg-container">
+            <h5>You don't need to</h5>
+          </div>
+          <div class="received-msg msg-container">
+            <h5>will you ?</h5>
+          </div>
+          <!-- each msg ends -->
+          <!-- each msg starts -->
+          <div class="sent-msg msg-container">
+            <h5>yah I will take mine</h5>
+          </div>
+          <div class="received-msg msg-container">
+            <h5>call me when you leave your apartment</h5>
+          </div>
+          <!-- each msg ends -->
+          <!-- each msg starts -->
+          <div class="sent-msg msg-container">
+            <h5>why not</h5>
+          </div>
+          <div class="received-msg msg-container">
+            <h5>ok great!</h5>
           </div>
           <!-- each msg ends -->
 
